# InstantDashboard-ADK

./: .cursorrules  .dockerignore  .env-stackoverflow  .gitignore  DASHBOARD_APP_PLAN.md  Dockerfile  README.md  README_INTERACTIVE_ANALYTICS_REPORT_WRITER.md  RESUME_BULLETS_DASHBOARD_APP.md  alembic.ini  env.template  new_plan.md  ngrok.yml  pyproject.toml  railway-env-template.txt  requirements.txt  start_demo.sh  test_real_adk_integration.py  test_real_prompt_usage.py
alembic/: env.py
api/: main.py  report_writer_main.py
api/auth/: __init__.py  endpoints.py  models.py  oauth.py
api/rate_limiting/: __init__.py
data_science/utils/: create_bq_table.py  reference_guide_RAG.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/report-writer/: page.tsx
frontend/src/app/report-writer/documents/: page.tsx
frontend/src/app/report-writer/editor/[id]/: page.tsx
frontend/src/config/: api.ts
google-apps-script/: Code.gs  README.md  index.html  simple_api_server.py  test_add_on.py
instant_dashboard/: __init__.py  agent.py  prompts.py
instant_dashboard/shared/: __init__.py  bigquery.py  tools.py  utils.py
instant_dashboard/sub_agents/: __init__.py  bigquery_runner.py  chart_generator.py  query_planner.py
instant_dashboard/testing/: PHASE_3_DOCUMENTATION.md  PROJECT_STATUS.md  README.md  __init__.py  debug_imports.py  run_all_tests.py  test_bigquery_runner_step5.py  test_coordinator_integration.py  test_direct_query_planner.py  test_execute_query_plan.py  test_foundation.py  test_phase_2_demo.py  test_phase_3.py
report_writer/: __init__.py  prompts.py
report_writer/agents/: __init__.py  content_coordinator_agent.py  outline_manager_agent.py  report_template_agent.py  section_generator_agent.py  title_suggestion_agent.py
report_writer/database/: __init__.py  config.py  models.py
shared/: __init__.py  tools.py
shared/bigquery/: __init__.py
shared/utils/: __init__.py
src/app/: page.tsx
src/components/: DataChart.tsx  QueryForm.tsx  ResultsDisplay.tsx  StatsCards.tsx
